tests/snapshots/run_wpt_conformance__litert_reduceL1_float32_0D_constant_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_l1.https.any.js",
    "reduceL1 float32 0D constant tensor empty axes",
    "litert",
    "PASS",
)
