tests/snapshots/run_wpt_conformance__litert_reduceL1_float32_1D_constant_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_l1.https.any.js reduceL1 float32 1D constant tensor empty axes, litert
 reduce_l1 :: reduceL1 float32 1D constant tensor empty axes: index 0: actual=-5.5088263 expected=5.5088263 ulp=2170589340 tolerance=8
  inputs: reduceL1Input: [-5.50882625579834, 5.50882625579833] (constant)
  expected reduceL1Output: [5.5088263, 5.5088263]
  actual reduceL1Output: [-5.5088263, 5.5088263]
  expected reduceL1Output full nd:
(shape [2])
[5.5088263, 5.5088263]
  actual reduceL1Output full nd:
(shape [2])
[-5.5088263, 5.5088263]

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[2] @bytes([78, 72, 176, 192, 78, 72, 176, 64]);
  }

  nodes {
    [reduceL1Output] = reduceL1(operand_0, axes=[], keepDimensions=false, label="");
  }

  outputs { reduceL1Output; }
}
