tests/snapshots/run_wpt_conformance__litert_reduceL1_float32_2D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_l1.https.any.js",
    "reduceL1 float32 2D tensor default options",
    "litert",
    "PASS",
)
